cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_39.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:100: error: DEAD_STORE
  The value written to &tin0 (type unsigned int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:100:5: Write of unused value
98.           l2c(xor1, iv);
99.       }
100.       tin0 = tin1 = tout0 = tout1 = xor0 = xor1 = 0;
           ^
101.       inW0 = inW1 = outW0 = outW1 = 0;
102.       tin[0] = tin[1] = 0;
